(chore): update the canary page

--- a/src/app/modules/canary/page.component.html
+++ b/src/app/modules/canary/page.component.html
@@ -52,9 +52,9 @@
           <h2>Experiments</h2>
           <ul class="m-canaryExperiments__list">
             <li>
-              Navigation, Composer, Discovery, Wallet - 7th April 2020
-              <a href="https://gitlab.com/groups/minds/-/epics/133"
-                >(Epic 133)</a
+              Upgrade to Angular 9 - 5th June 2020
+              <a href="https://gitlab.com/minds/front/-/merge_requests/981"
+                >(front!918)</a
               >
             </li>
           </ul>
