--- a/src/app/modules/boost/console/card/card.component.html
+++ b/src/app/modules/boost/console/card/card.component.html
@@ -2,7 +2,7 @@
   *ngIf="boost.entity"
   [object]="boost.entity"
   [flags]="{ hideTabs: true }"
-  hostClass="mdl-card mdl-shadow--2dp"
+  class="mdl-card mdl-shadow--2dp"
 ></minds-card>
 
 <div class="m-boost-card--manager">
