--- a/src/app/modules/report/console/appeal.component.html
+++ b/src/app/modules/report/console/appeal.component.html
@@ -47,7 +47,7 @@
     *ngIf="appeal.report.entity && appeal.report.entity.type != 'comment'"
     class="m-report-console--card"
     [object]="appeal.report.entity"
-    hostClass="mdl-card"
+    class="mdl-card"
   ></minds-card>
 
   <div
