--- a/src/app/modules/report/juryduty/session/content.component.html
+++ b/src/app/modules/report/juryduty/session/content.component.html
@@ -22,7 +22,7 @@
         class=""
         [object]="report.entity"
         [flags]="{ hideToolbar: true }"
-        hostClass="mdl-card m-border"
+        class="mdl-card m-border"
       ></minds-card>
     </ng-container>
     <ng-template #noEntity>
