Adding missing i18n tags for core components

--- a/src/app/modules/discovery/disclaimer/disclaimer.component.html
+++ b/src/app/modules/discovery/disclaimer/disclaimer.component.html
@@ -3,7 +3,10 @@
   dismissibleId="discovery-disclaimer-2020"
 >
   <div class="m-sidebarWidget__body">
-    <p class="m-discoveryDisclaimer__text">
+    <p
+      class="m-discoveryDisclaimer__text"
+      i18n="@@DISCOVERY_DISCLAIMER__OUR_APPROACH_INFORMATION"
+    >
       Our
       <a href="https://change.minds.com" target="_blank">research-based</a>
       approach in handling misinformation and other types of controversial
