--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
@@ -51,6 +51,7 @@
         class="m-groupSidebarMarkersListItem__label"
         i18n="@@M__COMMON__DISCOVER_GROUPS"
         *ngIf="showLabels"
+        i18n="@@M__COMMON__DISCOVER_GROUPS"
       >
         Discover Groups
       </span>
