--- a/src/app/modules/search/bar.component.html
+++ b/src/app/modules/search/bar.component.html
@@ -20,6 +20,7 @@
     id="search"
     autocomplete="chrome-off"
     [placeholder]="placeholder"
+    i18n-placeholder="@@COMMON__SEARCH"
     #searchInput
   />
   <label class="mdl-textfield__label" for="search"></label>
