--- a/src/app/modules/settings-v2/other/paywall-preview/paywall-preview.component.html
+++ b/src/app/modules/settings-v2/other/paywall-preview/paywall-preview.component.html
@@ -67,6 +67,7 @@
       [disabled]="!canSubmit()"
       [saving]="inProgress"
       (click)="save()"
+      i18n="@@MINDS__SETTINGS__WIRE__SAVE_SETTINGS"
     >
       Save Settings
     </m-shadowboxSubmitButton>
