--- a/src/app/modules/settings-v2/other/subscription-tiers/subscription-tiers.component.html
+++ b/src/app/modules/settings-v2/other/subscription-tiers/subscription-tiers.component.html
@@ -18,6 +18,7 @@
       [disabled]="isSaving"
       [saving]="isSaving"
       (click)="save()"
+      i18n="@@MINDS__SETTINGSV2__SUB_TIERS__SAVE_SUBSCRIPTION_TIERS"
     >
       Save Subscription Tiers
     </m-shadowboxSubmitButton>
