--- a/src/app/modules/settings-v2/pro/cancel/cancel.component.html
+++ b/src/app/modules/settings-v2/pro/cancel/cancel.component.html
@@ -1,4 +1,7 @@
-<div class="m-settingsV2__desc">
+<div
+  class="m-settingsV2__desc"
+  i18n="@@SETTINGSV2_CANCEL__MANAGE_YOUR_SUBSCRIPTION_UPGRADE"
+>
   Manage your subscription.
   <a class="m-form__upgradeLink" routerLink="/pro" *ngIf="!isActive"
     >Upgrade to Pro</a
