--- a/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
+++ b/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
@@ -1,4 +1,7 @@
-<div class="m-settingsV2__desc">
+<div
+  class="m-settingsV2__desc"
+  i18n="@@SETTINGSV2_HASHTAGS__SETUP_YOUR_CATEGORY_INFO"
+>
   Set up your category filter hashtags.
   <a class="m-form__upgradeLink" routerLink="/pro" *ngIf="!isActive"
     >Upgrade to Pro</a
