--- a/src/app/modules/settings-v2/pro/payouts/payouts.component.html
+++ b/src/app/modules/settings-v2/pro/payouts/payouts.component.html
@@ -1,4 +1,7 @@
-<div class="m-settingsV2__desc">
+<div
+  class="m-settingsV2__desc"
+  i18n="@@SETTINGSV2_HASHTAGS__SELECT_CURRENCY_WISH_PAID_OUT_INFO"
+>
   Select the currency type you wish you be paid out in. Please note payouts only
   occur after your
   <a routerLink="/analytics/dashboard/earnings">earnings</a> are equivalent to
