--- a/src/app/modules/wallet/v2/components/phone-verification/phone-verification.component.html
+++ b/src/app/modules/wallet/v2/components/phone-verification/phone-verification.component.html
@@ -1,13 +1,19 @@
-<h2>
+<h2 i18n="@@WALLETV2_ONCHAIN_TRANSFER__PHONE_VERIFICATION">
   Phone Verification
 </h2>
 <div class="m-walletModal__desc">
-  <p class="m-walletSecondaryText">
+  <p
+    class="m-walletSecondaryText"
+    i18n="@@WALLETV2_ONCHAIN_TRANSFER__YOU_CAN_EARN_TEXT"
+  >
     You can earn tokens for your contributions to the Minds network. The more
     interactions on your content, the greater your share of the daily token
     reward pool to your off-chain address.
   </p>
-  <p class="m-walletSecondaryText">
+  <p
+    class="m-walletSecondaryText"
+    i18n="@@WALLETV2_ONCHAIN_TRANSFER__START_EARNING_PHONE_TEXT"
+  >
     To start earning rewards, you will need to enter a unique phone number.
   </p>
 </div>
