--- a/src/app/modules/wallet/v2/dashboard.component.html
+++ b/src/app/modules/wallet/v2/dashboard.component.html
@@ -4,7 +4,7 @@
     <ng-template #header>
       <ng-container m-dashboardLayout__header>
         <div>
-          <h3>
+          <h3 i18n="@@WALLET_V2__TOKENS__YOUR_WALLETS">
             Your Wallet
           </h3>
         </div>
