--- a/src/app/modules/wallet/wallet.component.html
+++ b/src/app/modules/wallet/wallet.component.html
@@ -7,7 +7,10 @@
         routerLinkActive="m-topbar--navigation--item-active"
       >
         <span>Tokens</span>
-        <m-tooltip icon="help">
+        <m-tooltip
+          icon="help"
+          i18n="@@WALLET_V2__WALLET__SEE_YOUR_CONTRIBUTIONS_INFO"
+        >
           See your contributions score and rewards, withdraw them and configure
           your ethereum wallet
         </m-tooltip>
@@ -19,7 +22,10 @@
         routerLinkActive="m-topbar--navigation--item-active"
       >
         <span>Wire</span>
-        <m-tooltip icon="help">
+        <m-tooltip
+          icon="help"
+          i18n="@@WALLET_V2__WALLET__YOU_SEND_RECEIVED_WIRES_LEDGER"
+        >
           Your sent and received wires ledger
         </m-tooltip>
       </a>
@@ -29,8 +35,8 @@
         routerLink="/plus"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span>Minds Plus</span>
-        <m-tooltip icon="help">
+        <span i18n="@@WALLET_V2__TOKENS__MINDS_PLUS">Minds Plus</span>
+        <m-tooltip icon="help" i18n="@@WALLET_V2__WALLET__OPT_OUT">
           Opt-out of boosts, earn 1,000 monthly points, access exclusive Minds
           content, and more
         </m-tooltip>
