--- a/src/app/modules/discovery/feeds/feeds.component.html
+++ b/src/app/modules/discovery/feeds/feeds.component.html
@@ -1,11 +1,17 @@
 <div class="m-tabs__container">
   <div class="m-tabs__tab">
-    <a routerLink="../preferred" routerLinkActive="m-tabs__tab--selected"
+    <a
+      routerLink="../preferred"
+      routerLinkActive="m-tabs__tab--selected"
+      i18n="@@DISCOVERY_FEEDS__YOUR_FEED"
       >Your Feed</a
     >
   </div>
   <div class="m-tabs__tab">
-    <a routerLink="../trending" routerLinkActive="m-tabs__tab--selected"
+    <a
+      routerLink="../trending"
+      routerLinkActive="m-tabs__tab--selected"
+      i18n="@@DISCOVERY_FEEDS__TRENDING_FEED"
       >Trending Feed</a
     >
   </div>
@@ -15,7 +21,8 @@
 
 <div class="m-goBack">
   <a routerLink="/discovery" [queryParams]="{ reload: false }">
-    <i class="material-icons">arrow_back</i><span>Back</span>
+    <i class="material-icons">arrow_back</i
+    ><span i18n="@@DISCOVERY_FEEDS__BACK">Back</span>
   </a>
 </div>
 
