--- a/src/app/modules/discovery/suggestions/suggestions.component.html
+++ b/src/app/modules/discovery/suggestions/suggestions.component.html
@@ -1,17 +1,26 @@
 <div class="m-tabs__container">
   <div class="m-tabs__tab">
-    <a routerLink="../user" routerLinkActive="m-tabs__tab--selected"
+    <a
+      routerLink="../user"
+      routerLinkActive="m-tabs__tab--selected"
+      i18n="@@DISCOVERY_SUGGESTIONS__CHANNELS"
       >Channels</a
     >
   </div>
   <div class="m-tabs__tab">
-    <a routerLink="../group" routerLinkActive="m-tabs__tab--selected">Groups</a>
+    <a
+      routerLink="../group"
+      routerLinkActive="m-tabs__tab--selected"
+      i18n="@@DISCOVERY_SUGGESTIONS__GROUPS"
+      >Groups</a
+    >
   </div>
 </div>
 
 <div class="m-goBack">
   <a routerLink="/discovery" [queryParams]="{ reload: false }">
-    <i class="material-icons">arrow_back</i><span>Back</span>
+    <i class="material-icons">arrow_back</i
+    ><span i18n="@@DISCOVERY_SUGGESTIONS__BACK">Back</span>
   </a>
 </div>
 
