--- a/src/app/modules/discovery/tags/sidebar-tags.component.html
+++ b/src/app/modules/discovery/tags/sidebar-tags.component.html
@@ -12,7 +12,9 @@
           <div>
             <h4>#{{ tag.value }}</h4>
             <div class="m-discoveryTrendListItem__supportingText--below">
-              <span>{{ tag.posts_count }} posts</span>
+              <span i18n="@@DISCOVERY_SIDEBAR_TAGS__X_POSTS"
+                >{{ tag.posts_count }} posts</span
+              >
             </div>
           </div>
         </a>
@@ -23,6 +25,7 @@
     class="m-sidebarWidget__seeMore"
     (click)="seeMore()"
     *ngIf="limit === 5 && !(inProgress$ | async)"
+    i18n="@@DISCOVERY_SIDEBAR_TAGS__SEE_MORE"
     >See more</a
   >
 </m-sidebarWidget>
