--- a/src/app/modules/settings-v2/account/share-buttons/share-buttons.component.html
+++ b/src/app/modules/settings-v2/account/share-buttons/share-buttons.component.html
@@ -3,7 +3,9 @@
     <div class="m-form__field--checkbox stretchedField">
       <div class="m-form__row--input">
         <label for="showButtons" class="m-form__customInputWrapper__checkbox">
-          <ng-container>Show share buttons</ng-container>
+          <ng-container i18n="@@SETTINGS_V2_SHARE_BUTTONS__SHOW_SHARE_BUTTONS"
+            >Show share buttons</ng-container
+          >
           <input
             type="checkbox"
             id="showButtons"
@@ -23,6 +25,7 @@
       [disabled]="!canSubmit()"
       [saving]="inProgress"
       (click)="submit()"
+      i18n="@@SETTINGS_V2_SHARE_BUTTONS__UPDATE_PREFERENCES"
     >
       Update Preference
     </m-shadowboxSubmitButton>
