--- a/src/app/modules/settings-v2/billing/recurring-payments/recurring-payments.component.html
+++ b/src/app/modules/settings-v2/billing/recurring-payments/recurring-payments.component.html
@@ -89,6 +89,7 @@
   <div
     *ngIf="!subscriptions.length"
     class="m-settingsV2__desc m-settingsV2__notice"
+    i18n="@@SETTINGS_V2_RECURRING_PAYMENTS__YOU_HAVENT_SETUP_ANY"
   >
     <span>You haven't set up any recurring payments.</span>
   </div>
