--- a/src/app/modules/settings-v2/other/delete-account/delete-account.component.html
+++ b/src/app/modules/settings-v2/other/delete-account/delete-account.component.html
@@ -5,6 +5,7 @@
         <m-formInput__checkbox
           formControlName="understood"
           class="form-control"
+          i18n="@@SETTINGS_V2_DELETE_ACCOUNT__I_UNDERSTAND"
         >
           I understand and wish to continue.
         </m-formInput__checkbox>
@@ -17,6 +18,7 @@
       [saving]="inProgress"
       color="red"
       (click)="submit()"
+      i18n="@@SETTINGS_V2_DELETE_ACCOUNT__DELETE_ACCOUNT"
     >
       Delete Account
     </m-shadowboxSubmitButton>
