--- a/src/app/modules/settings-v2/pro/footer/footer.component.html
+++ b/src/app/modules/settings-v2/pro/footer/footer.component.html
@@ -1,4 +1,7 @@
-<div class="m-settingsV2__desc">
+<div
+  class="m-settingsV2__desc"
+  i18n="@@SETTINGSV2__FOOTER__SETUP_SITES_FOOTER_LINKS"
+>
   Set up your site's footer links.
   <a class="m-form__upgradeLink" routerLink="/pro" *ngIf="!isActive"
     >Upgrade to Pro</a
