--- a/src/app/modules/settings-v2/pro/theme/theme.component.html
+++ b/src/app/modules/settings-v2/pro/theme/theme.component.html
@@ -1,4 +1,7 @@
-<div class="m-settingsV2__desc">
+<div
+  class="m-settingsV2__desc"
+  i18n="@@SETTINGSV2_HASHTAGS__SETUP_SITE_COLOR_THEME"
+>
   Set up your site's color theme.
   <a class="m-form__upgradeLink" routerLink="/pro" *ngIf="!isActive"
     >Upgrade to Pro</a
