--- a/src/app/modules/settings-v2/settings-v2.component.html
+++ b/src/app/modules/settings-v2/settings-v2.component.html
@@ -27,7 +27,8 @@
             <div class="m-settingsV2__headerWrapper">
               <div class="m-settingsV2__backButton">
                 <a (click)="goBack()">
-                  <i class="material-icons">arrow_back</i><span>Back</span>
+                  <i class="material-icons">arrow_back</i
+                  ><span i18n="@@COMMON__ACTIONS__BACK">Back</span>
                 </a>
               </div>
               <div class="m-settingsV2__headerLabel">{{ routeData.title }}</div>
