--- a/src/app/modules/wallet/v2/btc/btc.component.html
+++ b/src/app/modules/wallet/v2/btc/btc.component.html
@@ -1,6 +1,10 @@
 <div class="m-tabs__container" hidden>
   <li class="m-tabs__tab">
-    <a routerLink="settings" routerLinkActive="selected">
+    <a
+      routerLink="settings"
+      routerLinkActive="selected"
+      i18n="@@COMMON__SETTINGS"
+    >
       Settings
     </a>
   </li>
