--- a/src/app/modules/wallet/v2/cash/settings/settings-cash.component.html
+++ b/src/app/modules/wallet/v2/cash/settings/settings-cash.component.html
@@ -1,5 +1,5 @@
 <div class="m-walletSettings">
-  <h2>Bank Information</h2>
+  <h2 i18n="@@WALLETV2_SETTINGS_CASH__BANK_INFO">Bank Information</h2>
   <div *ngIf="inProgress" class="m-wallet__spinner">
     <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
   </div>
@@ -29,7 +29,10 @@
     <p *ngIf="view === 'error'" class="m-walletSecondaryText--error">
       {{ error }}
     </p>
-    <p *ngIf="view === 'nsfw-error'">
+    <p
+      *ngIf="view === 'nsfw-error'"
+      i18n="@@WALLETV2_SETTINGS__SORRY_NO_NSFW_CHANNELS"
+    >
       Sorry, NSFW (not safe for work) channels are unable to onboard to Cash due
       to
       <a href="https://stripe.com/connect-account/legal" targer="_blank"
