--- a/src/app/modules/wallet/v2/components/onchain-transfer/onchain-transfer.component.html
+++ b/src/app/modules/wallet/v2/components/onchain-transfer/onchain-transfer.component.html
@@ -1,8 +1,11 @@
-<h2>
+<h2 i18n="@@WALLETV2_ONCHAIN_TRANSFER__ONCHAIN_TRANSFER">
   On-Chain Transfer
 </h2>
 <div class="m-walletSecondaryText--desc">
-  <p class="m-walletSecondaryText--16">
+  <p
+    class="m-walletSecondaryText--16"
+    i18n="@@WALLETV2_ONCHAIN_TRANSFER__YOU_CAN_REQUEST_UP_TO_X"
+  >
     You can request to transfer up to
     <span class="m-walletSecondaryText--16 m-walletSecondaryText--emphasis"
       >{balance, plural, =1 {{{balance | number}} token} other
@@ -11,7 +14,10 @@
     from your rewards to your on-chain wallet below. You may only transfer once
     per day.
   </p>
-  <p class="m-walletSecondaryText--15">
+  <p
+    class="m-walletSecondaryText--15"
+    i18n="@@WALLETV2_ONCHAIN_TRANSFER__GAS_FEE_NOTE"
+  >
     Note: a small amount of ETH will be charged to cover the transaction fee.
     Transfers go through an approval process and may take up to 72 hours to
     complete.
@@ -47,17 +53,29 @@
       </div>
       <div class="m-walletForm__row--validation">
         <ng-container *ngIf="!submitError && canTransfer">
-          <p *ngIf="amount.errors?.required">
+          <p
+            *ngIf="amount.errors?.required"
+            i18n="@@WALLETV2_ONCHAIN_TRANSFER__TRANSFER_AMOUNT_REQUIRED"
+          >
             Transfer amount required
           </p>
-          <p *ngIf="amount.errors?.moreThanZero && !amount.errors?.required">
+          <p
+            *ngIf="amount.errors?.moreThanZero && !amount.errors?.required"
+            i18n="@@WALLETV2_ONCHAIN_TRANSFER__TRANSFER_MUST_BE_GREATER"
+          >
             Transfer amount must be greater than zero
           </p>
-          <p *ngIf="amount.errors?.max">
+          <p
+            *ngIf="amount.errors?.max"
+            i18n="@@WALLETV2_ONCHAIN_TRANSFER__NOT_ENOUGH_FUNDS"
+          >
             You don't have enough tokens to make this transfer
           </p>
         </ng-container>
-        <p *ngIf="!canTransfer">
+        <p
+          *ngIf="!canTransfer"
+          i18n="@@WALLETV2_ONCHAIN_TRANSFER__ONLY_ONCE_PER_DAY"
+        >
           You may only transfer once per day
         </p>
         <p *ngIf="submitError">{{ submitError }}</p>
