--- a/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
@@ -6,12 +6,13 @@
   <!--- ADDRESS - OPTIONS - -------------------------->
   <!-- -------------------------------------------- -->
   <div *ngIf="!display">
-    <h2>
+    <h2 i18n="@@WALLET_V2_SETTINGS_TOKENS__ONCHAIN_ADDRESS">
       On-Chain Address
     </h2>
     <ng-container *ngTemplateOutlet="onchainDesc"></ng-container>
     <div class="m-walletSettings__recommendation">
-      <i class="material-icons">thumb_up</i><span>RECOMMENDED</span>
+      <i class="material-icons">thumb_up</i
+      ><span i18n="@@WALLET_V2_SETTINGS_TOKENS__RECOMMENDED">RECOMMENDED</span>
     </div>
     <ul class="m-walletSettings__tokenSetupOptionsContainer">
       <li class="m-walletSettings__tokenSetupOption--metamask">
@@ -19,6 +20,7 @@
           <img
             class="metamask"
             [src]="cdnAssetsUrl + 'assets/ext/metamask.png'"
+            i18n="@@WALLET_V2_SETTINGS_TOKENS__METAMASK"
           />
           <h2>
             MetaMask
@@ -26,11 +28,15 @@
         </div>
 
         <p *ngIf="!hasExternal">
-          <a (click)="downloadMetamask()">Install MetaMask</a>
+          <a
+            (click)="downloadMetamask()"
+            i18n="@@WALLET_V2_SETTINGS_TOKENS__INSTALL_METAMASK"
+            >Install MetaMask</a
+          >
           for the most seamless user experience.
         </p>
         <ng-container *ngIf="hasExternal">
-          <p>
+          <p i18n="@@WALLET_V2_SETTINGS_TOKENS__MINDS_RECOMMENDS_METAMASK_INFO">
             Minds recommends using MetaMask for the most seamless user
             experience.
           </p>
@@ -41,21 +47,25 @@
             [disabled]="inProgress || linkingMetamask"
             [saving]="inProgress || linkingMetamask"
             (click)="useExternal()"
+            i18n="@@WALLET_V2_SETTINGS_TOKENS__LINK_METAMASK"
           >
             Link MetaMask
           </m-shadowboxSubmitButton>
         </ng-container>
-        <p *ngIf="linkingMetamask && downloadingMetamask">
+        <p
+          *ngIf="linkingMetamask && downloadingMetamask"
+          i18n="@@WALLET_V2_SETTINGS_TOKENS__RELOAD_INFO"
+        >
           Note: You might need to reload Minds after installing and setting up
           MetaMask.
         </p>
       </li>
 
       <li class="m-walletSettings__tokenSetupOption--custom">
-        <h2>
+        <h2 i18n="@@WALLET_V2_SETTINGS_TOKENS__CUSTOM">
           Custom
         </h2>
-        <p>
+        <p i18n="@@WALLET_V2_SETTINGS_TOKENS__METAMASK_ALT_INFO">
           You don’t need to use MetaMask. You can alternatively manage your own
           address.
         </p>
@@ -70,7 +80,9 @@
           class="m-walletSecondaryText--backButton"
           (click)="backToCurrentAddress()"
           ><i class="material-icons">❮</i
-          ><span>Back to current address</span></a
+          ><span i18n="@@WALLET_V2_SETTINGS_TOKENS__BACK_TO_CURRENT"
+            >Back to current address</span
+          ></a
         >
       </p>
     </ul>
@@ -83,10 +95,14 @@
     <!-- -------------------------------------------- -->
     <li *ngIf="display === Views.CreateAddress">
       <!-- Address not created yet -->
-      <h2>
+      <h2 i18n="@@WALLET_V2_SETTINGS_TOKENS__CREATE_ADDRESS">
         Create Address
       </h2>
-      <p *ngIf="!generatedAccount" class="m-walletSecondaryText--desc">
+      <p
+        *ngIf="!generatedAccount"
+        class="m-walletSecondaryText--desc"
+        i18n="@@WALLET_V2_SETTINGS_TOKENS__GENERATE_CUSTOM_ADDRESS_INFO"
+      >
         Generate a custom address to use instead of MetaMask. Once the address
         is generated, you will be provided with a link to download the address
         and private key.
@@ -95,11 +111,16 @@
         *ngIf="!generatedAccount"
         [saving]="inProgress"
         (click)="createAddress()"
+        i18n="@@WALLET_V2_SETTINGS_TOKENS__CREATE_ADDRESS"
       >
         Create Address
       </m-shadowboxSubmitButton>
       <!-- Address created -->
-      <p *ngIf="generatedAccount" class="m-walletSecondaryText--desc">
+      <p
+        *ngIf="generatedAccount"
+        class="m-walletSecondaryText--desc"
+        i18n="@@WALLET_V2_SETTINGS_TOKENS__THE_ADDRESS_X_WAS_SUCCESSFULLY"
+      >
         The address
         <span class="m-walletSecondaryText--emphasis">{{
           generatedAccount.address
@@ -113,21 +134,28 @@
         *ngIf="generatedAccount"
         [saving]="inProgress"
         (click)="downloadPrivateKey()"
+        i18n="@@WALLET_V2_SETTINGS_TOKENS__DOWNLOAD_PRIVATE_KEY"
       >
         Download Private Key
       </m-shadowboxSubmitButton>
       <a class="m-walletSecondaryText--backButton" (click)="display = null"
-        ><i class="material-icons">❮</i><span>Back to settings</span></a
+        ><i class="material-icons">❮</i
+        ><span i18n="@@WALLET_V2_SETTINGS_TOKENS__BACK_TO_SETTINGS"
+          >Back to settings</span
+        ></a
       >
     </li>
     <!-- -------------------------------------------- -->
     <!--- ADDRESS - PROVIDE ---------------------------->
     <!-- -------------------------------------------- -->
     <li *ngIf="display === Views.ProvideAddress">
-      <h2>
+      <h2 i18n="@@WALLET_V2_SETTINGS_TOKENS__PROVIDE_ADDRESS">
         Provide Address
       </h2>
-      <p class="m-walletSecondaryText--desc">
+      <p
+        class="m-walletSecondaryText--desc"
+        i18n="@@WALLET_V2_SETTINGS_TOKENS__ENTER_ADDRESS_AS_WALLET_INFO"
+      >
         Enter the address that will be stored as your wallet for Minds on-chain
         tokens and Ether payments. To conduct transactions you will need your
         wallet's private key and MetaMask cannot be installed in your browser.
