(feat): sidebar prompt for language selection

--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -14,6 +14,7 @@
   <div class="m-discovery__sidebar" m-pageLayout__pane="right">
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
+        <m-language__sidebarPrompt></m-language__sidebarPrompt>
         <m-discovery__disclaimer></m-discovery__disclaimer>
         <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
         <m-suggestions__sidebar type="group"></m-suggestions__sidebar>
