--- a/src/app/modules/newsfeed/newsfeed.component.html
+++ b/src/app/modules/newsfeed/newsfeed.component.html
@@ -158,6 +158,7 @@
   >
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
+        <m-language__sidebarPrompt></m-language__sidebarPrompt>
         <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
 
         <ng-container *mIfFeature="'navigation'">
