Redirect to single page entity on comment click for pro #1332

--- a/src/app/modules/newsfeed/feed-grid/feed-grid.component.html
+++ b/src/app/modules/newsfeed/feed-grid/feed-grid.component.html
@@ -2,7 +2,7 @@
   <m-newsfeed__entity
     [entity]="entity"
     *ngIf="entity$ | async as entity"
-    [displayOptions]="{ showComments: false, v2: true }"
+    [displayOptions]="{ showComments: false, v2: true, redirectComments: true }"
     (deleted)="delete($event)"
     [slot]="i"
   ></m-newsfeed__entity>
