--- a/src/app/modules/settings-v2/account/language/language.component.html
+++ b/src/app/modules/settings-v2/account/language/language.component.html
@@ -35,17 +35,12 @@
 
   <div
     class="m-settingsV2__desc"
-    *ngIf="false"
-    i18n="@@LANGUAGE__HELP_US_TRANSLATE"
+    i18n="@@LANGUAGE__HELP_US_TRANSLATE__WITH__LINK"
   >
     Bring Minds to the world! If you speak another language, help the community
-    by translating the Minds
-    <a target="_blank" href="https://poeditor.com/join/project/A45VLCwD0Y"
-      >Web App</a
-    >
-    and
-    <a target="_blank" href="https://poeditor.com/join/project/QhGWcF9w8T"
-      >Mobile App</a
+    with translations on
+    <a target="_blank" href="https://translate.minds.com/"
+      >translate.minds.com</a
     >.
   </div>
 </div>
